k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brand-tracker
  labels:
    name: brand-tracker
